--- a/src/app/pessoas/pessoas.component.html
+++ b/src/app/pessoas/pessoas.component.html
@@ -1,1 +1,18 @@
-<p>pessoas works!</p>
+<table>
+    <tr>
+        <th>id</th>
+        <th>Nome</th>
+        <th>E-mail</th>
+        <th>Detalhe</th>
+    </tr>
+    <tr *ngFor ='let pessoa of pessoasArray'>
+        <td>{{pessoas.id}}</td>
+        <td>{{pessoas.name}}</td>
+        <td>{{pessoas.email}}</td>
+        <td><button (click) = "detalheDaPessoa(pessoa.id)">Detalhe</button> </td>
+    </tr>
+</table>
+
+    <div *ngIf="detalhepessoas">
+        <app-pessoas-detalhe [pessoa]= "pessoa"></app-pessoas-detalhe>
+    </div>
